# deliberate

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  deliberate.md  pyproject.toml
.claude/commands/: deliberate-code.md  deliberate-setting.md  deliberate.md
.paul/: HANDOFF-2026-03-18-v03-code-personas.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.paul/milestones/: v0.2-ROADMAP.md
.serena/: project.yml
deliberators/: __init__.py  __main__.py  context.py  engine.py  formatter.py  loader.py  models.py  prompts.py  storage.py  web_pusher.py
deliberators/data/: config.yaml
deliberators/web/: __init__.py  __main__.py  server.py
personas/: arendt.yaml  aristoteles.yaml  barbara-liskov.yaml  cecilia-payne.yaml  christensen.yaml  cicero.yaml  code-synthesizer.yaml  da-vinci.yaml  daniel-kahneman.yaml  don-norman.yaml  elizabeth-bennet.yaml  fowler.yaml  hedy-lamarr.yaml  hegel.yaml  holmes.yaml  ibn-khaldun.yaml  jobs.yaml  jony-ive.yaml  kent-beck.yaml  knuth.yaml  linus.yaml  lupin.yaml  machiavelli.yaml  marx.yaml  nassim-taleb.yaml  occam.yaml  samenvatter.yaml  scheherazade.yaml  schema.yaml  schneier.yaml  shakespeare.yaml  socrates.yaml  templar.yaml  tubman.yaml  virginia-apgar.yaml  weil.yaml
personas/archived/: alan-turing.yaml  buckminster-fuller.yaml  da-vinci.yaml  frances-allen.yaml  holmes.yaml  hopper.yaml  katherine-johnson.yaml  knuth.yaml  marple.yaml  (+5 more)
tests/: test_cli.py  test_config.py  test_context.py  test_engine.py  test_loader.py  test_models.py  test_package.py  test_personas.py  test_prompts.py  test_quality.py  test_storage.py  test_web.py  test_web_pusher.py
(+89 files in other folders)
