[project]
name = "deliberators"
version = "0.1.0"
description = "Multi-perspectief AI deliberatie team — Claude Code skill"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
